// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionBackground /> should render with background dark 1`] = `
.c0 {
  background: #FFFFFF;
  color: #0A1128;
  color: #FFFFFF;
  background: #0A1128;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  max-width: 120rem;
  margin: 0 auto;
  padding: 3.2rem;
  width: 100%;
  position: relative;
}

<div>
  <div
    class="c0"
    id="1"
  >
    <section
      class="c1"
    >
      <h1>
        teste
      </h1>
    </section>
  </div>
</div>
`;

exports[`<SectionBackground /> should render with background white 1`] = `
.c0 {
  background: #FFFFFF;
  color: #0A1128;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  max-width: 120rem;
  margin: 0 auto;
  padding: 3.2rem;
  width: 100%;
  position: relative;
}

<div>
  <div
    class="c0"
    id="1"
  >
    <section
      class="c1"
    >
      <h1>
        teste
      </h1>
    </section>
  </div>
</div>
`;
